# cookiecutter-genai-template

./: README.md  cookiecutter.json
docs/: installation_workflow.drawio
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.repository_name}}/: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  poetry.toml  pyproject.toml
{{cookiecutter.repository_name}}/docs/: _sidebar.md  home.md
